Closed
Bug 362906
Opened 18 years ago
Closed 18 years ago
xul template using html content crashes
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: enndeakin, Assigned: enndeakin)
Details
Attachments
(2 files, 1 obsolete file)
1.31 KB,
text/plain
|
Details | |
1.49 KB,
patch
|
smaug
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
The attached testcase gives this assertion several times and then crashes:
ASSERTION: lazy state set with no XUL content builder in ancestor chain: 'Error', file /builds/trunk-dragimage/mozilla/content/xul/content/src/nsXULElement.cpp, line 1838
Assignee | ||
Comment 1•18 years ago
|
||
Needs chrome privileges to see. The rdf datasource is at http://xulplanet.com/ndeakin/tests/xts/scripts/animals.rdf
Assignee | ||
Comment 2•18 years ago
|
||
Attachment #247686 -
Flags: superreview?(bugmail)
Attachment #247686 -
Flags: review?(bugmail)
Assignee | ||
Comment 3•18 years ago
|
||
Attachment #247686 -
Attachment is obsolete: true
Attachment #247687 -
Flags: superreview?(bugmail)
Attachment #247687 -
Flags: review?(bugmail)
Attachment #247686 -
Flags: superreview?(bugmail)
Attachment #247686 -
Flags: review?(bugmail)
I'm not really the right person to review template stuff. I can sr though.
Attachment #247687 -
Flags: review?(bugmail)
Comment 5•18 years ago
|
||
http://xulplanet.com/ndeakin/tests/xts/scripts/animals.rdf returns 403 forbidden.
Updated•18 years ago
|
Attachment #247687 -
Flags: review?(Olli.Pettay)
Comment 6•18 years ago
|
||
Comment on attachment 247687 [details] [diff] [review]
This is the right patch
Not sure if my review counts here, but I went through lazystatebits handling and this does make sense to me.
(Slowly getting used to xul template code...)
Attachment #247687 -
Flags: review?(Olli.Pettay) → review+
Assignee | ||
Comment 7•18 years ago
|
||
I've fixed the link.
> (Slowly getting used to xul template code...)
Excellent! Let me know if you need help
Attachment #247687 -
Flags: superreview?(jonas) → superreview+
Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•18 years ago
|
Flags: in-testsuite?
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•