Bug 362906, assertion when root node in a template isn't XUL, r=smaug,sr=sicking